# snakemake-executor-plugin-google-lifesciences

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
snakemake_executor_plugin_google_lifesciences/: __init__.py  common.py
tests/: tests.py
