[tool.poetry]
name = "snakemake-executor-plugin-google-lifesciences"
version = "0.1.0"
description = "A Snakemake executor plugin for google lifesciences."
authors = [
    "Vanessa Sochat <sochat1@llnl.gov>",
    "Johannes Koester <johannes.koester@uni-due.de>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
snakemake-interface-common = "^1.4.1"
snakemake-interface-executor-plugins = "^4.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
coverage = "^7.3.1"
pytest = "^7.4.2"
snakemake = {git = "https://github.com/snakemake/snakemake.git", branch = "feat/api-rewrite"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
